--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,217 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Playfair Display", serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+:root {
+  --primaryColor: #ff5a60;
+  --secondaryColor: #fcf91c;
+  --textLight: #9c9c9c;
+  --textDark: #000;
+  --textWhite: #fff;
 }
+/*-------
+--------- Landing ---------
+-------------------------*/
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.landing {
+  background: url("images/landing.jpg");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  width: 100%;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+.landing-box {
+  padding: 0 10%;
+  background-color: black;
+  opacity: 0.8;
+  min-height: 60vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.landing-box p {
+  font-size: 1.2rem;
+  color: var(--textLight);
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  padding-top: 15px;
+  line-height: 30px;
+}
+.landing-box h2 {
+  font-size: 3rem;
+  color: var(--textWhite);
+  text-transform: uppercase;
+  letter-spacing: 0.4rem;
+  font-weight: bold;
+  padding: 20px 0;
+}
+.landing-box span {
+  color: var(--secondaryColor);
+}
+.landing-box h4 {
+  color: var(--textLight);
+  font-size: 1.2rem;
+  letter-spacing: 0.1rem;
+}
+.landing-button-1 {
+  background-color: var(--primaryColor);
+  padding: 10px 40px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+.landing-button-2 {
+  border: 1px solid var(--secondaryColor);
+  padding: 10px 30px;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+}
+/*About*/
+
+/*-------
+--------- Landing Ends---------
+-----------------------------*/
+
+/*-------
+--------- New Session---------
+----------------------------*/
+
+.text-underline {
+  border-bottom: 3px solid var(--primaryColor);
+  margin: 0 40%;
+}
+.post-card {
+  -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+.post-card-content {
+  padding: 15px;
+}
+.post-card-content h4 {
+  padding: 10px 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+.post-card-content p {
+  color: var(--textLight);
+}
+.post-card-time p {
+  position: absolute;
+  border-radius: 20px;
+  margin: 10px;
+  padding: 10px;
+  color: #fff;
+  background-color: var(--primaryColor);
+}
+.post-card-category {
   color: white;
+  padding: 5px 10px;
+  background-color: var(--primaryColor);
+}
+.post-card-category:hover {
+  color: #000;
+  background: none;
+  border: 1px solid var(--secondaryColor);
+}
+/*single product*/
+.card-image {
+  width: 100%;
+  height: 440px;
+  object-fit: cover;
+  object-position: center;
+}
+.single-post {
+  padding: 0 10%;
 }
 
-.App-link {
-  color: #61dafb;
+.single-post-content p {
+  font-size: 1rem;
+  color: var(--textLight);
+  line-height: 2rem;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.single-post-content h4 {
+  color: var(--primaryColor);
+  font-size: 1rem;
+}
+.productListCard {
+  border: 1px solid var(--primaryColor);
+  margin: 10px 0;
+}
+/*-------
+--------- New Session Ends ---------
+----------------------------------*/
+/*-------
+--------- Footer Start ---------
+------------------------------*/
+.footer {
+  background-color: var(--textDark);
+  width: 100%;
+  min-height: 40vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: var(--textWhite);
+}
+.footer h3 {
+  padding: 10px 0;
+  font-size: 1.5rem;
+  color: var(--textWhite);
+}
+.footer p {
+  font-size: 1rem;
+}
+/*-------
+--------- Footer Ends ---------
+-----------------------------*/
+@media screen and (max-width: 770px) {
+  .landing-box p {
+    font-size: 0.8rem;
   }
-  to {
-    transform: rotate(360deg);
+  .landing-box h2 {
+    font-size: 2rem;
+  }
+  .landing-box h4 {
+    font-size: 1rem;
+  }
+  .landing-button-1 {
+    font-size: 0.8rem;
+    padding: 10px 30px;
+  }
+  .landing-button-2 {
+    font-size: 0.8rem;
+    padding: 10px 25px;
+  }
+  .single-post {
+    padding: 0 10px;
+  }
+  .single-post h1 {
+    font-size: 2rem;
+    padding-top: 20px;
+  }
+  .single-post-content h3 {
+    font-size: 1.5rem;
+  }
+  .card-image {
+    height: 320px;
+  }
+}
+@media screen and (max-width: 320px) {
+  .landing-button-1 {
+    font-size: 0.6rem;
+    padding: 10px 30px;
+  }
+  .landing-button-2 {
+    font-size: 0.6rem;
+    padding: 10px 25px;
   }
 }
